final version: swagger updated, response schema od stops updated
